--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DB_CONNECTION_STRING="host=drona.db.elephantsql.com user=nboreafj password=Cv6qr6J6Fml74tgt7fib3qVkp5Z-zzDC dbname=nboreafj port=5432 sslmode=disable"
+DB_CONNECTION_STRING="host=drona.db.elephantsql.com user=nboreafj password=Cv6qr6J6Fml74tgt7fib3qVkp5Z-zzDC dbname=nboreafj port=5432
+sslmode=disable"
